--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,110 +1,250 @@
-<!-- <div style="height: 10px;width: 100%;"></div> -->
-  <ion-card  class="top-card" disabled>
-    <ion-row>
-      <ion-chip><ion-avatar><img src="../../assets/images/icon.png"></ion-avatar>
-        <ion-label>You</ion-label>
-      </ion-chip>
-      <ion-input (click)="openPostModal()" type="text" clearInput required [(ngModel)]="post" placeholder="Enter a new post"></ion-input>
-    </ion-row>
-    <ion-item class="ion-text-center">
-      <ion-buttons slot="start" (click)="pickFile('image')">
-      <ion-icon name="image"></ion-icon>&nbsp;&nbsp;
-      <ion-label >Image</ion-label>
-    </ion-buttons>
-    <b style="margin-left: 45%;">|</b>
-      <ion-buttons slot="end" (click)="pickFile('video')">
-      <ion-icon name="videocam" ></ion-icon>&nbsp;&nbsp;
-      <ion-label>video</ion-label>
-    </ion-buttons>
-    </ion-item>
-  </ion-card>
+<ion-header color="primary" [hidden]="hiddenHeader" > 
+  <ion-toolbar color="primary" >
+      <ion-buttons slot="start">
+          <ion-menu-button autoHide="false" ></ion-menu-button>
+      </ion-buttons>
+      <ion-title >Soko</ion-title>
+      <ion-searchbar placeholder="Search for a shop "animated type="text" *ngIf="showSearch"></ion-searchbar>
+      <!-- SEARCH BAR -->
+      <ion-buttons slot="end"  style="padding-right: 5px;">
+          <ion-button (click)="openPostModal()">
+            <ion-icon name="add-circle-outline" size="large"></ion-icon>
+          </ion-button> 
+      </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 
-<ion-content [scrollEvents]="true" (ionScroll)="onScroll($event)" >
 
-  <ion-card disabled>
-    <ion-card-header>
-        <ion-chip (click)="infoModal('shop')">
-          <ion-avatar><img src="../../assets/images/icon.png"></ion-avatar>
-          <ion-label>QuickMatt</ion-label>
-        </ion-chip>
-        1 hr . <ion-icon name="globe"></ion-icon>
-    </ion-card-header>
-    <ion-card-content no-padding>
-      <img width="100%" src="../../assets/images/ad.jpg">
-      <ion-text>
-        Mega discounts this friday .
-      </ion-text>
-    </ion-card-content>
-    <ion-item style="margin-left:0;margin-right:0;">
-        <ion-icon [ngClass]="{'color': h}" (click)="like()" size="large" name="heart"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
-        <ion-icon  (click)="Addcomment = true" size="large" name="chatboxes"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
-        <ion-icon  (click)="share()" name="share-alt" size="large"></ion-icon>
-       
-      </ion-item>
-      <div >
-        <ion-label padding>{{likes.count}} likes</ion-label><br>
-        <div>
-            <ion-item >
-                <ion-chip><ion-avatar ><img src="../../assets/images/icon.png"></ion-avatar>
-                  <ion-label>1 hr .</ion-label>
-                </ion-chip>
-              <ion-col>
-                <ion-label style="font-size: 11pt;">Joseph</ion-label>
-                <ion-text style="font-size: 10pt;">We are very pleased with the turn up this week. looking forward to set out another mega sale discount</ion-text><br>
-              </ion-col>
-            </ion-item>
-            <div *ngIf="Addcomment">
-                <ion-item >
-                    <ion-avatar ><img src="../../assets/images/icon.png"></ion-avatar>&nbsp;&nbsp;
-                    <ion-textarea name="text" required placeholder="Add a comment..."></ion-textarea>
-                    <a >Post</a>
-                </ion-item>
-            </div>
-        </div>
-        <a padding (click)="comments()">view all comments</a>
-      </div>
-  </ion-card>
-  <ion-card disabled>
-    <ion-card-header>
-        <ion-chip (click)="infoModal('shop')">
-          <ion-avatar><img src="../../assets/images/icon.png"></ion-avatar>
-          <ion-label>QuickMatt</ion-label>
-        </ion-chip>
-        1 hr . <ion-icon name="globe"></ion-icon>
-    </ion-card-header>
-    <ion-card-content no-padding>
-      <img width="100%" src="../../assets/images/ad.jpg">
-      <ion-text>
-        Mega discounts this friday .
-      </ion-text>
-    </ion-card-content>
-    <ion-item style="margin-left:0;margin-right:0;">
-        <ion-icon [ngClass]="{'color': h}" (click)="like()" size="large" name="heart"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
-        <ion-icon  (click)="Addcomment = true" size="large" name="chatboxes"></ion-icon>&nbsp;&nbsp;&nbsp;&nbsp;
-        <ion-icon  (click)="share()" name="share-alt" size="large"></ion-icon>
-       
-      </ion-item>
-      <div >
-        <ion-label padding>{{likes.count}} likes</ion-label><br>
-        <div>
-            <ion-item >
-                <ion-chip><ion-avatar ><img src="../../assets/images/icon.png"></ion-avatar>
-                  <ion-label>1 hr .</ion-label>
-                </ion-chip>
-              <ion-col>
-                <ion-label style="font-size: 11pt;">Joseph</ion-label>
-                <ion-text style="font-size: 10pt;">We are very pleased with the turn up this week. looking forward to set out another mega sale discount</ion-text><br>
-              </ion-col>
-            </ion-item>
-            <div *ngIf="Addcomment">
-                <ion-item >
-                    <ion-avatar ><img src="../../assets/images/icon.png"></ion-avatar>&nbsp;&nbsp;
-                    <ion-textarea name="text" required placeholder="Add a comment..."></ion-textarea>
-                    <a >Post</a>
-                </ion-item>
-            </div>
-        </div>
-        <a padding (click)="comments()">view all comments</a>
-      </div>
-  </ion-card>
-</ion-content>
+
+<ion-content  [scrollEvents]="true" (ionScroll)="onScroll($event)">
+
+
+  <div class="page-content"><br>
+    <div>
+      <ion-searchbar placeholder="Search for a shop "animated type="text"></ion-searchbar>
+    </div>
+
+      <ion-card class="card" *ngFor="let item of Posts">
+          <div class="header">
+              <div class="image" (click)="infoModal('Kakila Organic')">
+                  <ion-avatar>
+                      <img src="{{user.logo}}">
+                  </ion-avatar>
+              </div>
+              <div class="name" (click)="infoModal('Kakila Organic')">
+                  {{item.shop}}
+              </div>
+              <div class="date">
+                  10 mins ago
+              </div>
+          </div>
+          <!-- DESCRIPTION -->
+          <p class="description">
+              <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eius eveniet corporis  -->
+          {{item.Text}}
+          </p>
+
+          <!-- MAIN IMAGE -->
+          <div class="main-image">
+              <img src="../../assets/images/Kakilaposter.jpg" (click)="showImage()">
+          </div>
+
+          <!-- LIKE, COMMENT AND SHARE -->
+          <div class="like-comment-share">
+              <ion-row>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="like()">
+                          <ion-icon [ngClass]="{'color': h}" size="large" src="../../assets/images/heart.svg"></ion-icon>
+                          &nbsp;&nbsp;<span class="ion-text-lowercase">{{item.likes}}</span>
+                      </ion-button>
+                  </ion-col>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="comments()">
+                          <ion-icon size="large" src="../../assets/images/comment.svg" ></ion-icon>
+                          &nbsp;&nbsp;<span class="ion-text-lowercase">{{item.comments}}</span>
+                      </ion-button>
+                  </ion-col>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="share()">
+                          <ion-icon style="width: 14.5px; padding-right: 0px;" size="large" src="../../assets/images/share.svg" ></ion-icon> 
+                          &nbsp;&nbsp;<span class="ion-text-lowercase"></span>
+                      </ion-button>
+                  </ion-col>
+              </ion-row>
+          </div>
+
+          <div class="line"></div>
+
+          <!-- LAST USER COMMENT -->
+          <div class="user-comment">
+
+              <div class="user-avatar">
+                  <ion-avatar>
+                      <img src="{{item.lastComment.image}}">
+                  </ion-avatar>
+              </div>
+              <div class="user-name-and-date">
+                  <div class="name">{{item.lastComment.user}}</div>
+                  <div class="date">10 mins ago</div>
+              </div>
+
+              <div class="comment-container">
+                  <p class="comment">
+                      <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quidem nostrum nobis earum. -->
+                      {{item.lastComment.Text}}
+                  </p>
+                  <div class="view-all-comments" (click)="comments()">View all comments</div>
+              </div>
+
+          </div>
+      </ion-card><br>
+      <!-- END OF FIRST SOKO POST -->
+
+<!-- 
+      SECOND SOKO POST
+      <div class="card">
+          <div class="header">
+              <div class="image" (click)="infoModal('Kakila Organic')">
+                  <ion-avatar>
+                      <img src="{{user.logo}}">
+                  </ion-avatar>
+              </div>
+              <div class="name" (click)="infoModal('Kakila Organic')">
+                Kakila Organic
+              </div>
+              <div class="date">
+                  10 mins ago
+              </div>
+          </div>
+          DESCRIPTION
+          <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eius eveniet corporis 
+          </p>
+
+          LIKE, COMMENT AND SHARE
+          <div class="like-comment-share">
+              <ion-row>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="like()">
+                          <ion-icon [ngClass]="{'color': h}" size="large" src="../../assets/images/heart.svg"></ion-icon>
+                          &nbsp;&nbsp;<span class="ion-text-lowercase">{{likes.count}}</span>
+                      </ion-button>
+                  </ion-col>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="comments()">
+                          <ion-icon size="large" src="../../assets/images/comment.svg" ></ion-icon>
+                          &nbsp;&nbsp;<span class="ion-text-lowercase">55</span>
+                      </ion-button>
+                  </ion-col>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="share()">
+                          <ion-icon style="width: 14.5px; padding-right: 0px;" size="large" src="../../assets/images/share.svg" ></ion-icon> 
+                          &nbsp;&nbsp;<span class="ion-text-lowercase"></span>
+                      </ion-button>
+                  </ion-col>
+              </ion-row>
+          </div>
+
+          <div class="line"></div>
+
+          LAST USER COMMENT
+          <div class="user-comment" >
+
+              <div class="user-avatar">
+                  <ion-avatar>
+                      <img src="../../assets/images/header.png" >
+                  </ion-avatar>
+              </div>
+              <div class="user-name-and-date">
+                  <div class="name">Maxime Lee</div>
+                  <div class="date">10 mins ago</div>
+              </div>
+
+              <div class="comment-container">
+                  <p class="comment">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quidem nostrum nobis earum.
+                  </p>
+                  <div class="view-all-comments" (click)="comments()">View all comments</div>
+              </div>
+
+          </div>
+      </div><br>
+      END OF SECOND SOKO POST
+
+
+      THIRD SOKO POST
+      <div class="card">
+          <div class="header">
+              <div class="image" (click)="infoModal('Kakila Organic')">
+                  <ion-avatar>
+                      <img src="{{user.logo}}">
+                  </ion-avatar>
+              </div>
+              <div class="name" (click)="infoModal('Kakila Organic')">
+                Kakila Organic
+              </div>
+              <div class="date">
+                  10 mins ago
+              </div>
+          </div>
+
+          MAIN IMAGE
+          <div class="main-image">
+              <img src="../../assets/images/Kakilaposter.jpg" (click)="showImage()">
+          </div>
+
+          LIKE, COMMENT AND SHARE
+          <div class="like-comment-share">
+              <ion-row>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="like()">
+                          <ion-icon [ngClass]="{'color': h}" size="large" src="../../assets/images/heart.svg"></ion-icon>
+                          &nbsp;&nbsp;<span class="ion-text-lowercase">{{likes.count}}</span>
+                      </ion-button>
+                  </ion-col>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="comments()">
+                          <ion-icon size="large" src="../../assets/images/comment.svg" ></ion-icon>
+                          &nbsp;&nbsp;<span class="ion-text-lowercase">55</span>
+                      </ion-button>
+                  </ion-col>
+                  <ion-col size="4">
+                      <ion-button fill="light" (click)="share()">
+                          <ion-icon style="width: 14.5px; padding-right: 0px;" size="large" src="../../assets/images/share.svg" ></ion-icon> 
+                          &nbsp;&nbsp;<span class="ion-text-lowercase"></span>
+                      </ion-button>
+                  </ion-col>
+              </ion-row>
+          </div>
+
+          <div class="line"></div>
+
+          LAST USER COMMENT
+          <div class="user-comment">
+
+              <div class="user-avatar">
+                  <ion-avatar>
+                      <img src="../../assets/images/header.png" >
+                  </ion-avatar>
+              </div>
+              <div class="user-name-and-date">
+                  <div class="name">Maxime Lee</div>
+                  <div class="date">10 mins ago</div>
+              </div>
+
+              <div class="comment-container" style="margin-bottom: 10px;">
+                  <p class="comment">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quidem nostrum nobis earum.
+                  </p>
+                  <div class="view-all-comments" (click)="comments()">View all comments</div>
+              </div>
+
+          </div>
+      </div><br> --> 
+       <!-- END OF THIRD SOKO POST -->
+
+  </div>
+  <!-- END OF SOKO POST -->
+
+  </ion-content>
+
