--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -1,35 +1,43 @@
-<ion-content color="primary">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start" padding>
-      <ion-menu-button color=""></ion-menu-button>
+<ion-header color="primary">
+  <ion-toolbar color="primary" padding>
+    <ion-buttons slot="start" (click)="back()">
+      <ion-icon name="arrow-back" size="large"></ion-icon>
     </ion-buttons>
-    <ion-title>Notifications</ion-title>
-
+    <ion-title>
+      Notifications
+    </ion-title>
   </ion-toolbar>
 
-    <div class="card-main">
-      <ion-card *ngFor="let item of notices" (click)="viewOrder(item.title)">
-        <ion-row padding>
-          <ion-col size="3" >
-            <ion-avatar>
-              <img src="../../assets/images/icon.png">
-            </ion-avatar>
-          </ion-col>
+</ion-header>
+<ion-content>
+  <div *ngFor="let item of notices" color="primary">
+    <ion-row >
+      <ion-col size="2" style="padding-top: 75px;">
+        <ion-avatar >
+          <img src="../../assets/images/icon.png">
+        </ion-avatar>
+      </ion-col>
+      <ion-col>
+        <ion-card padding>
           <ion-col style="text-align: left;padding-top: 20px;">
-            <ion-label>{{item.title}}</ion-label><br>
-            <ion-label>{{ item.Date.toDate() | date}}</ion-label>
+            <ion-label>{{item.Title}}</ion-label><br>
+            <ion-label>{{ item.Date | date }}</ion-label>
           </ion-col>
-        </ion-row>
-        <ion-card-content>
-          <p>
-            Hello {{shop}} your order is Ready for pick up. <br>
-            You ordered for : 
-          </p>
-          <blockquote>
-            {{item.message}}
-          </blockquote>
-          
-        </ion-card-content>
-      </ion-card>
-    </div>
+          <ion-card-content>
+            <ion-text>
+              Hello {{shop}}, You have a new Order for : <br>
+              <span>
+                {{item.message}}
+              </span>
+            </ion-text>
+           
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </div>
+  <!-- <div class="ion-text-center" style="margin-top: 200px;">
+    <ion-icon size="large" name="flash"></ion-icon><br>
+    <ion-label>You have no Notifications</ion-label>
+  </div> -->
 </ion-content>
