--- a/src/app/notifications/notifications.page.scss
+++ b/src/app/notifications/notifications.page.scss
@@ -1,20 +1,16 @@
-
-.card-main{
-  background-color: var(--ion-color-light);
-  border-radius: 20px 20px 0px 0px;
-  // margin-top: 50px;
-  margin-bottom: 0px;
-  width: 100%;
-  height: 100%;
+ion-card{
   margin-left: 0px;
-
+  margin-right: 0px;
+  border-radius: 10px ;
+  background-color: lavender;
 }
-.notice-unread{
-  border-radius: 15px;
-  background-color: white;
-  text-transform: capitalize;
+ion-avatar{
+  text-align: center;
+  width: 50px;
+  height: 50px;
 }
-.notice-read{
-  border-radius: 15px;
+span{
   text-transform: capitalize;
+  color: grey ;
+  font-weight: bold ;
 }
