--- a/src/app/postmodal/postmodal.page.html
+++ b/src/app/postmodal/postmodal.page.html
@@ -14,14 +14,14 @@
     
   <ion-buttons>
     <ion-chip>
-      <ion-avatar ><img src="../../assets/images/bg.png"></ion-avatar>
-      <ion-label>QuickMatt</ion-label>
+      <ion-avatar ><img src="{{logo}}"></ion-avatar>
+      <ion-label>{{shop}}</ion-label>
       </ion-chip><br>
       <ion-label><b style="color: green;font-size: 2em;">.</b>online</ion-label>
     
   </ion-buttons>
 
-  <ion-textarea [(ngModel)]="postText" placeholder="What is happening at your shop ?" style="min-height: 200px;">
+  <ion-textarea [(ngModel)]="postText" placeholder="What is happening at your shop ?" style="min-height: 200px;margin-top: 10px;">
 
   </ion-textarea>
   <div *ngIf="images.length != 0">
@@ -41,8 +41,8 @@
 </ion-content>
 <ion-footer>
   <ion-item>
-    <ion-label (click)="actionSheet()">Add to your post</ion-label>
-    <ion-icon (click)="pickFile('image')" name="image" slot="end"></ion-icon>
-    <ion-icon (click)="pickFile('video')" name="videocam" slot="end"></ion-icon>
+    <ion-label (click)="actionSheet()">Add media to your post</ion-label>
+    <ion-icon (click)="pickFile('image')" name="image" slot="end" color="primary"></ion-icon>&nbsp;
+    <ion-icon (click)="pickFile('video')" name="videocam" slot="end" color="primary"></ion-icon>
   </ion-item>
 </ion-footer>
