--- a/src/app/remove-category/remove-category.page.html
+++ b/src/app/remove-category/remove-category.page.html
@@ -7,7 +7,7 @@
     <ion-title  text-center>Remove  Category</ion-title>
   </ion-toolbar>
 <div class="container" *ngIf="show">
-  <ion-label padding class="label">Tap on a category to select</ion-label>
+  <ion-label padding class="label">Tap on a category to delete</ion-label>
   <ion-item text-center *ngFor="let item of categories.categories">
     <!-- <ion-icon name="bulb"></ion-icon> -->
     <ion-label>{{item}}</ion-label>
